🐛 FIX: Align the Related Stories thumbnails correctly

--- a/style.css
+++ b/style.css
@@ -2057,6 +2057,7 @@ section.cta-home.turquoise {
 	display: inline-block;
 	max-width: 186px;
 	margin: 0 10px;
+	vertical-align: top;
 }
 
 .related-stories img {
